[package]
name = "bmbp_validate_type"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
chrono = "0.4.38"
serde = "1.0.208"
serde_json = "1.0.125"
